plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation 'org.springframework.boot:spring-boot-starter-jdbc'  //JDBC
    runtimeOnly 'com.mysql:mysql-connector-j'   //MySQL
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'  //JPA

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'    //JWT
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'   //JWT
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'    //JWT
    implementation 'javax.xml.bind:jaxb-api:2.3.1'  //JAXB

    implementation 'org.jsoup:jsoup:1.15.3'     // Jsoup
    implementation 'com.googlecode.json-simple:json-simple:1.1'     // JSONObject

    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE' //AWS S3

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2' //Swagger

    implementation 'org.apache.poi:poi-ooxml:5.2.5'     // xlsx

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-json'

    implementation 'org.springframework.boot:spring-boot-starter-validation'

    testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
